--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: base
 
       <article role="main" class="blog-post">
         {{ content }}
-        {% site.video %}
+        % sillyman ZRk9nwvVH20 640 480 %}
       </article>
 
       {% if page.tags.size > 0 %}
