--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: base
+partial: youtube
 ---
 
 {% include header.html type="post" %}
@@ -33,7 +34,7 @@ layout: base
 
       <article role="main" class="blog-post">
         {{ content }}
-        {% youtube page.video %}
+        {{ page.youtubeurl }}
       </article>
 
       {% if page.tags.size > 0 %}
