--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ partial: youtube
 
       <article role="main" class="blog-post">
         {{ content }}
-        {% youtube page.youtubeurl %}
+        {% youtubeurl %}
       </article>
 
       {% if page.tags.size > 0 %}
