--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ partial: youtube
 
       <article role="main" class="blog-post">
         {{ content }}
-        {% youtube "https://www.youtube.com/watch?v=ZRk9nwvVH20" %}
+        {% youtube "https://www.youtube.com/watch?v=cR2ohv3Dpns" %}
       </article>
 
       {% if page.tags.size > 0 %}
